--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 </li>
                 <li>
                     <div>
-                        <a target="_blank" href="https://mani-cars-shop.netlify.app/"><i class="fa-solid fa-link"></i>  Cars-Shop</a> |
-                        <a target="_blank" href="https://github.com/khode-mani/Cars-Shop"><i class="fa-brands fa-github"></i> Repository </a>
+                        <a target="_blank" href="https://mani-gaming.netlify.app/"><i class="fa-solid fa-link"></i>  Gaming-Shop</a> |
+                        <a target="_blank" href="https://github.com/khode-mani/react-gaming-proj"><i class="fa-brands fa-github"></i> Repository </a>
                     </div>
-                    <p class="desc"> React js + Bootstrap  </p>
+                    <p class="desc"> React js + Bootstrap + Sass  </p>
                 </li>
 
 
